             <hart@ntp.org>
* [Bug 3849] ntpd --wait-sync times out. <hart@ntp.org>
* [Bug 3847] SSL detection in configure should run-test if runpath is needed.
             <hart@ntp.org>
* [Bug 3846] Use -Wno-format-truncation by default. <hart@ntp.org>
* [Bug 3845] accelerate pool clock_sync when IPv6 has only link-local access.
             <hart@ntp.org>
* [Bug 3842] Windows ntpd ppsapi DLL load failure crashes. <hart@ntp.org>
* [Bug 3841] 4.2.8p17 build break w/ gcc 12 -Wformat-security without -Wformat
             Need to remove --Wformat-security when removing -Wformat to
             silence numerous libopts warnings.  <hart@ntp.org>
* [Bug 3837] NULL pointer deref crash when ntpd deletes last interface.
             Reported by renmingshuai.  Correct UNLINK_EXPR_SLIST() when the
             list is empty. <hart@ntp.org>
* [Bug 3835] NTP_HARD_*FLAGS not used by libevent tearoff. <hart@ntp.org>
* [Bug 3831] pollskewlist zeroed on runtime configuration. <hart@ntp.org>
* [Bug 3830] configure libevent check intersperses output with answer. <stenn@>
* [Bug 3828] BK should ignore a git repo in the same directory.
             <burnicki@ntp.org>
* [Bug 3827] Fix build in case CLOCK_HOPF6021 or CLOCK_WHARTON_400A
             is disabled.  <burnicki@ntp.org>
* [Bug 3825] Don't touch HTML files unless building inside a BK repo.
             Fix the script checkHtmlFileDates.  <burnicki@ntp.org>
* Update ntp.conf documentation to add "delrestrict" and correct information
  about KoD rate limiting.  <hart@ntp.org>
* html/clockopt.html cleanup.  <stenn@ntp.org>
* Add DSA, DSA-SHA, and SHA to tests/libntp/digests.c. <hart@ntp.org>
* Provide ntpd thread names to debugger on Windows. <hart@ntp.org>
* Remove dead code libntp/numtohost.c and its unit tests. <hart@ntp.org>
* Remove class A, B, C IPv4 distinctions in netof(). <hart@ntp.org>
* Use NONEMPTY_COMPILATION_UNIT in more conditionally-compiled files.