@@ -320,7 +320,7 @@ lex_init_stack(
  * anything until the next 'lex_init_stack()' succeeded.
  */
 void
-lex_drop_stack()
+lex_drop_stack(void)
 {
 	lex_stack = drop_stack_do(lex_stack);
 }
@@ -334,7 +334,7 @@ lex_drop_stack()
  * in the force-eof mode before this call.
  */
 int/*BOOL*/
-lex_flush_stack()
+lex_flush_stack(void)
 {
 	int retv = FALSE;
 
@@ -425,7 +425,7 @@ lex_from_file(void)
 }
 
 struct FILE_INFO *
-lex_current()
+lex_current(void)
 {
 	/* this became so simple, it could be a macro. But then,
 	 * lex_stack needed to be global...
